[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_plugin_manifest"
repository.workspace = true
version              = "0.1.0"

[dependencies]
anyhow          = { workspace = true }
dashmap         = { workspace = true }
pathdiff        = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rustc-hash      = { workspace = true }

[lints]
workspace = true
